Styles adjusted to display URLs in the PDF handout.

--- a/slides/lib/reveal.js/css/print/pdf.css
+++ b/slides/lib/reveal.js/css/print/pdf.css
@@ -199,3 +199,6 @@ ul, ol, div, p {
   text-align: left;
   visibility: visible;
 }
+.reveal a:link:after, .reveal a:visited:after {
+  content:" [" attr(href) "] ";
+}
